[tool.poetry]
name = "integrator"
version = "0.2.0"
description = ""
authors = ["wenke.lai <wenke.studio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Infrastracture as Code
pulumi = "^3.107.0"
pulumi-aws = "^6.23.0"
# Diagram as Code
diagrams = {git = "https://github.com/wenke-studio/diagram-as-code.git", rev = "0.1.0"}
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# format
black = "^24.2.0"
isort = "^5.13.2"
# lint
pylint = "^3.0.4"
mypy = "^1.8.0"
# test
pytest = "^8.0.1"

[tool.isort]
profile = "black"
known_pulumi = "pulumi,pulumi_aws"
sections = "FUTURE,STDLIB,PULUMI,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pylint.main]
load-plugins = [
]
ignore = [
]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "fixme",
  "too-many-arguments",
  "too-many-locals",
]

[tool.pylint.basic]
good-names = [
  "_",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
