[project]
name = "integrator"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.133.0",
    "pulumi-aws>=6.52.0",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "commitizen>=3.29.0",
    "ruff>=0.6.7",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
